--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "repository": "https://github.com/Thinkful-Ed/blog-app-mongoose-challenge-solution",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha --exit"
   },
   "dependencies": {
     "express": "^4.16.3",
     "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
     "uuid": "^3.2.1"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "faker": "^4.1.0",
+    "mocha": "^5.0.5"
   },
   "keywords": [
     "node",
